--- a/ios/Cupra/Info.plist
+++ b/ios/Cupra/Info.plist
@@ -72,6 +72,21 @@
 	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
+	<key>CFBundleURLTypes</key>
+	<array>
+	<dict>
+	<key>CFBundleURLSchemes</key>
+	<array>
+		<string>fbAPP-ID</string>
+	</array>
+	</dict>
+	</array>
+	<key>FacebookAppID</key>
+	<string>591252778700926</string>
+	<key>FacebookClientToken</key>
+	<string>ed4bc07236832a08a0cc317a06505ceb</string>
+	<key>FacebookDisplayName</key>
+	<string>Cupra</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
