--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react-native-fast-image": "^8.3.6",
     "react-native-fbsdk-next": "^4.3.0",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-image-slider-box": "^1.1.5",
     "react-native-keyboard-spacer": "^0.4.1",
     "react-native-localization": "^2.1.7",
     "react-native-media-controls": "^2.3.0",
