--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "react-native-screens": "^3.4.0",
     "react-native-shared-element": "^0.7.0",
     "react-native-slider": "^0.11.0",
+    "react-native-swiper-flatlist": "^3.0.14",
     "react-native-touchable-scale": "^2.1.2",
     "react-native-unimodules": "^0.14.6",
     "react-native-vector-icons": "^8.1.0",
