--- a/package.json
+++ b/package.json
@@ -50,9 +50,11 @@
     "react-native": "0.64.1",
     "react-native-animatable": "^1.3.3",
     "react-native-device-info": "^8.3.0",
+    "react-native-document-picker": "^6.0.4",
     "react-native-fast-image": "^8.3.6",
     "react-native-fbsdk-next": "^4.3.0",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-image-picker": "^4.0.6",
     "react-native-image-slider-box": "^1.1.5",
     "react-native-infinite-scroll": "^1.0.6",
     "react-native-keyboard-spacer": "^0.4.1",
