--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "react-native-unimodules": "^0.14.6",
     "react-native-vector-icons": "^8.1.0",
     "react-native-video": "^5.1.1",
+    "react-native-webview": "^11.13.0",
     "react-navigation-shared-element": "^5.0.0-alpha1",
     "react-redux": "^7.2.4",
     "redux": "^4.1.1",
