--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react-native-fast-image": "^8.3.6",
     "react-native-fbsdk-next": "^4.3.0",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-google-static-map": "^0.1.13",
     "react-native-image-picker": "^4.0.6",
     "react-native-image-slider-box": "^1.1.5",
     "react-native-image-zoom-viewer": "^3.0.1",
