--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -185,6 +185,7 @@ android {
 }
 
 dependencies {
+     implementation project(path: ":@react-native-firebase_messaging")
     implementation fileTree(dir: "libs", include: ["*.jar"])
     //noinspection GradleDynamicVersion
     implementation "com.facebook.react:react-native:+"  // From node_modules
