--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "react-native-localize": "^2.1.4",
     "react-native-media-controls": "^2.3.0",
     "react-native-modal": "^12.0.2",
+    "react-native-orientation-locker": "^1.3.1",
     "react-native-paper": "^4.9.2",
     "react-native-radial-gradient": "^1.0.8",
     "react-native-reanimated": "^2.2.0",
