--- a/package.json
+++ b/package.json
@@ -3,20 +3,11 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "8": "npx react-native run-ios --simulator='iPhone 8' && npm run talk",
-    "11": "npx react-native run-ios --simulator='iPhone 11' && npm run talk",
-    "12": "npx react-native run-ios --simulator='iPhone 12' && npm run talk",
-    "SE": "npx react-native run-ios --simulator='iPhone SE' && npm run talk",
     "android": "react-native run-android",
-    "ios": "npx react-native run-ios && npm run talk",
+    "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
-    "lint": "prettier -c --write . && eslint . --ext .js,.jsx,.ts,.tsx --fix",
-    "lint-build": "yarn lint-errors && yarn build",
-    "build": "tsc",
-    "lint-errors": "prettier -c --write .  && eslint . --ext .js,.jsx,.ts,.tsx --fix --quiet",
-    "xcode": "open ios/Cupra.xcworkspace",
-    "talk": "say $USER', you are a great developer'"
+    "lint": "eslint ."
   },
   "dependencies": {
     "@react-native-community/async-storage": "^1.12.1",
@@ -26,7 +17,7 @@
     "@react-native-firebase/app": "^12.5.0",
     "@react-native-firebase/auth": "^12.5.0",
     "@react-native-firebase/messaging": "^12.5.0",
-    "@react-native-google-signin/google-signin": "^6.0.1",
+    "@react-native-google-signin/google-signin": "6.0.1",
     "@react-navigation/bottom-tabs": "^5.11.11",
     "@react-navigation/drawer": "^5.12.5",
     "@react-navigation/native": "^5.9.4",
@@ -39,20 +30,21 @@
     "@types/react-native-video": "^5.0.8",
     "@types/styled-components": "^5.1.11",
     "@types/styled-components-react-native": "^5.1.1",
+    "add": "^2.0.6",
     "axios": "^0.21.1",
     "expo-font": "^9.2.1",
     "expo-localization": "^10.2.0",
     "i18n-js": "^3.8.0",
     "moment": "^2.29.1",
     "pod-install": "^0.1.25",
-    "react": "17.0.1",
+    "react": "17.0.2",
     "react-hook-form": "^6.15.4",
-    "react-native": "0.64.1",
+    "react-native": "0.65.1",
     "react-native-animatable": "^1.3.3",
     "react-native-device-info": "^8.3.0",
     "react-native-document-picker": "^6.0.4",
     "react-native-fast-image": "^8.3.6",
-    "react-native-fbsdk-next": "^4.3.0",
+    "react-native-fbsdk-next": "^4.3.1",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-google-static-map": "^0.1.13",
     "react-native-image-picker": "^4.0.6",
@@ -61,17 +53,16 @@
     "react-native-infinite-scroll": "^1.0.6",
     "react-native-keyboard-spacer": "^0.4.1",
     "react-native-localization": "^2.1.7",
-    "react-native-localize": "^2.1.4",
     "react-native-media-controls": "^2.3.0",
     "react-native-modal": "^12.0.2",
     "react-native-orientation-locker": "^1.3.1",
     "react-native-paper": "^4.9.2",
     "react-native-radial-gradient": "^1.0.8",
     "react-native-reanimated": "^2.2.0",
-    "react-native-render-html": "^6.1.0",
+    "react-native-render-html": "^6.0.5",
     "react-native-safe-area-context": "^3.2.0",
-    "react-native-screens": "^3.6.0",
-    "react-native-shared-element": "^0.7.0",
+    "react-native-screens": "^3.4.0",
+    "react-native-shared-element": "^0.8.2",
     "react-native-slider": "^0.11.0",
     "react-native-swiper-flatlist": "^3.0.14",
     "react-native-touchable-scale": "^2.1.2",
@@ -86,53 +77,21 @@
     "rrule": "^2.6.8",
     "sentence": "^1.3.0",
     "sentence-case": "^3.0.4",
-    "styled-components": "^5.3.0"
+    "styled-components": "^5.3.0",
+    "yarn": "^1.22.11"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^2.0.0",
-    "@types/jest": "^26.0.23",
-    "@types/react": "~16.9.35",
-    "@types/react-native": "^0.64.5",
-    "@types/react-test-renderer": "^16.9.2",
-    "@typescript-eslint/eslint-plugin": "^4.25.0",
-    "@typescript-eslint/parser": "^4.25.0",
     "babel-jest": "^26.6.3",
-    "eslint": "^7.14.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-config-standard": "^16.0.3",
-    "eslint-plugin-import": "^2.23.3",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^3.4.0",
-    "eslint-plugin-promise": "^5.1.0",
-    "eslint-plugin-react": "^7.23.2",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "husky": "^6.0.0",
+    "eslint": "7.14.0",
     "jest": "^26.6.3",
-    "lint-staged": "^11.0.0",
-    "metro-react-native-babel-preset": "^0.64.0",
-    "prettier": "^2.3.0",
-    "react-test-renderer": "17.0.1",
-    "typescript": "^4.3.5"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "yarn lint-test"
-    }
-  },
-  "resolutions": {
-    "@types/react": "^17"
+    "metro-react-native-babel-preset": "^0.66.0",
+    "react-native-codegen": "^0.0.7",
+    "react-test-renderer": "17.0.2"
   },
   "jest": {
-    "preset": "react-native",
-    "moduleFileExtensions": [
-      "ts",
-      "tsx",
-      "js",
-      "jsx",
-      "json",
-      "node"
-    ]
+    "preset": "react-native"
   }
 }
