guest auth [ADD]

--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,4 +1,6 @@
 rootProject.name = 'Cupra'
+include ':react-native-apple-authentication'
+project(':react-native-apple-authentication').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-apple-authentication/android')
 include ':react-native-localization'
 project(':react-native-localization').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-localization/android')
 apply from: file("../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesSettingsGradle(settings)
