--- a/ios/Podfile
+++ b/ios/Podfile
@@ -14,6 +14,8 @@ target 'Cupra' do
 
   pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
 
+  pod 'react-native-apple-authentication', :path => '../node_modules/react-native-apple-authentication'
+
   target 'CupraTests' do
     inherit! :complete
     # Pods for testing
