--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-hook-form": "^6.15.4",
     "react-native": "0.65.1",
     "react-native-animatable": "^1.3.3",
+    "react-native-apple-authentication": "^2.0.0",
     "react-native-device-info": "^8.3.0",
     "react-native-document-picker": "^6.0.4",
     "react-native-fast-image": "^8.3.6",
